# Jumpy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cPlatform.cpp  cPlatform.hpp  main.cpp
.github/workflows/: ci.yml
include/: Generator.hpp  IntroState.hpp  Platform.hpp  PlayState.hpp
src/: GameEngine.cpp  Generator.cpp  IntroState.cpp  Platform.cpp  PlayState.cpp
